<resources>
    <string name="app_name">PerformanceMeasurement</string>
    <string name="main_screen_nav_text">Main Screen</string>
    <string name="active_goals_nav_text">Active Goals</string>
    <string name="achieved_goals_nav_text">Achieved Goals</string>
    <string name="stats_nav_text">Stats</string>
    <string name="tips_and_tricks_nav_text"><![CDATA[Tips & Tricks]]></string>
    <string name="about_us_nav_text">About</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name_of_new_goal_label_dialog">New Goal\'s Name:</string>
    <string name="name_of_new_goal_hint_dialog">Name Of New Goal</string>
    <string name="description_of_new_goal_label_dialog">New Goal\'s Description:</string>
    <string name="description_of_new_goal_hint_dialog">Description Of The New Goal</string>
    <string name="cancel_adding_new_goal_dialog_button_text">Cancel</string>
    <string name="add_new_goal_dialog_button_text">Add New Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="expand_goal">Expand Goal</string>
    <string name="finish">Finish Goal</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirm_setting_as_subgoals_of_parent_goal_dialog_button_text">Confirm</string>
    <string name="finish_goal_dialog_finish_button_text">Finish</string>
    <string name="active_goals_fragment_menu_sort_item_label">Sort</string>
    <string name="about_me_fragment_menu_search_item_label">Search</string>
    <string name="sort_goals_dialog_button_text">Sort</string>
    <string name="timer_notification_background_allowed_title">Goal In Progress</string>
    <string name="time_out_notification_background_allowed_title">Time Out</string>
    <string name="timer_notification_background_restricted_title">Background Activity is Restricted</string>
    <string name="timer_notification_button_caption">STOP</string>
    <string name="lose_pomodoro_dialog_content_text">Stopping the timer now will lead to losing all this session - Pomodoro must be complete in order to count. \n\nAre you sure you want to stop this session?</string>
    <string name="lose_pomodoro_dialog_label">Are you sure?</string>
    <string name="suggest_break_dialog_label">Take a Break?</string>
    <string name="lose_pomodoro_dialog_no_button_text">No</string>
    <string name="lose_pomodoro_dialog_yes_button_text">Yes</string>
    <string name="settings_nav_text">Settings</string>
    <string name="settings_pomodoro_title">Pomodoro</string>
    <string name="settings_pomodoro_length_title">Pomodoro Session Length\n(In Minutes)</string>
    <string name="settings_pomodoro_time_out_title">Pomodoro Session Time Out Length\n(In Minutes)</string>
    <string name="settings_timer_title">Stopwatch</string>
    <string name="settings_timer_notify_pomodoro_switch">Suggest taking a rest when the session passes the pomodoro session length</string>
    <string name="wheel_picker_title_text">Choose a Goal to work on:</string>
    <string name="time_estimation_of_new_goal_label_dialog">New Goal\'s Estimated Duration:</string>
    <string name="time_estimation_of_new_goal_hint_dialog">000000</string>
    <string name="division_of_work_time_chart_title">Division Of Work Time</string>
    <string name="timer_mode_division_chart_title">Timer Mode Division</string>
    <string name="timer_mode_results_chart_title">Timer Mode Results</string>
    <string name="neurons_progress_chart_title">Neurons Progress</string>
    <string name="enter_user_name_hint">Enter Email</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_text">Register</string>
    <string name="sign_in_text">Sign In</string>
    <string name="register_suggestion_TV_text">New User? Register Here</string>
    <string name="or_TV_text">Or Sign In With</string>
    <string name="user_sign_in_TV_text">Sign in with your user:</string>


    <string name="aboutLibraries_description_special1_name">My Github ID</string>
    <string name="aboutLibraries_description_special1_text">
        <![CDATA[NiDaAppDev]]>
    </string>
    <string name="aboutLibraries_description_special2_name">My Email</string>
    <string name="aboutLibraries_description_special2_text">
        <![CDATA[nidaappdev@gmail.com]]>
    </string>


    <string name="facebook_app_id" translatable="false">1234</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">56789</string>
    <string name="achievements_nav_text">Achievements</string>
    <string name="settings_tutorial_title">Tutorial</string>
    <string name="settings_tutorial_sub_title">Don\'t show tutorial on:</string>
    <string name="main_page_tutorial_checkbox">Main Page</string>
    <string name="active_goals_page_tutorial_checkbox">Active Goals Page</string>
    <string name="achieved_goals_page_tutorial_checkbox">Achieved Goals Page</string>

    <string name="app_description"><![CDATA[Performance Measurements is an app that will try to help
     you get your goals done better and faster.
     <br />It\'ll run the timers for your work periods, it\'ll suggest working with the Pomodoro
     method, and also will show you graphs that\'ll help you see your progress and learn from it
     about your work efficiency and more.]]></string>

</resources>
