<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/sign_in_text" />

    <TextView
        android:id="@+id/user_sign_in_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:text="@string/user_sign_in_TV_text"
        android:textColor="@color/brain1transparent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/sign_in_user_name_text_input_layout"
        app:layout_constraintStart_toStartOf="@id/sign_in_user_name_text_input_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_user_name_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_user_name_hint"
        android:padding="5dp"
        android:textColorHint="@color/brain2"
        app:hintTextColor="@color/brain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_sign_in_TV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_user_name_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/brain2"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_password_text_input_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password_hint"
        android:padding="5dp"
        android:textColorHint="@color/brain2"
        app:hintTextColor="@color/brain2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_user_name_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_in_password_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/brain2"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cpb_colorIndicator="@color/colorPrimaryDark"
        app:cpb_cornerRadius="22dp"
        app:cpb_selectorIdle="@drawable/dark_round_progress_button_background"
        app:cpb_textComplete="Success! Signing In..."
        app:cpb_textError="Failed To Sign In"
        app:cpb_textIdle="@string/sign_in_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_password_text_input_layout" />

    <TextView
        android:id="@+id/or_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/or_TV_text"
        android:textAlignment="center"
        android:textColor="@color/brain1transparent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />

    <ImageButton
        android:id="@+id/google_sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="0dp"
        android:src="@drawable/common_google_signin_btn_icon_light"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_TV" />

    <TextView
        android:id="@+id/register_suggestion_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/register_suggestion_TV_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/brain1transparent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_sign_in_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>