<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/register_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_user_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextInputLayout"
        android:layout_marginTop="140dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_user_name_hint"
        android:padding="5dp"
        android:textColorHint="@color/brain2"
        app:hintTextColor="@color/brain2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_user_name_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/brain2"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_user_name_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextInputLayout"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_password_hint"
        android:padding="5dp"
        android:textColorHint="@color/brain2"
        app:hintTextColor="@color/brain2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/brain2"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_confirm_password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_password_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/TextInputLayout"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/confirm_password_hint"
        android:padding="5dp"
        android:textColorHint="@color/brain2"
        app:hintTextColor="@color/brain2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_confirm_password_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/brain2"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.dd.CircularProgressButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:cpb_selectorIdle="@drawable/dark_round_progress_button_background"
        app:cpb_cornerRadius="22dp"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_password_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:cpb_textIdle="@string/register_text"
        app:cpb_textError="Registration Failed"
        app:cpb_textComplete="Success! Logging In..."
        app:cpb_textProgress="Trying To Create User..."
        android:textAllCaps="false"
        app:cpb_colorIndicator="@color/colorPrimaryDark"/>

</androidx.constraintlayout.widget.ConstraintLayout>